# C

./: .gitignore  CMakeLists.txt  README.md  main.c
function/: tools.h
labs/lab_1/: 2.1-2.14.h  2.16(второй вариант).h  2.16-2.30.h
labs/lab_2/: 7-16.h
labs/lab_3/: 1-20.h
лабы задания/: Laboratornaya_rabota_1.doc  Laboratornaya_rabota_10.doc  Laboratornaya_rabota_11.doc  Laboratornaya_rabota_2.doc  Laboratornaya_rabota_3.doc  Laboratornaya_rabota_4.doc  Laboratornaya_rabota_5.doc  Laboratornaya_rabota_6.doc  Laboratornaya_rabota_7.doc  Laboratornaya_rabota_8.doc  Laboratornaya_rabota_9.doc
